[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
arrayvec = "0.7.2"
cc = "1.0.72"
chrono = "0.4.19"
color-eyre = "0.5.11"
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
humantime = "2.1.0"
indicatif = { version = "0.16.2", features = ["rayon"] }
itertools = "0.10.3"
nalgebra = "0.29.0"
num = "0.4.0"
petgraph = "0.6.0"
rayon = "1.5.1"
reqwest = { version = "0.11.3", features = ["blocking","rustls-tls"], default-features = false }
structopt = "0.3.21"
tempfile = "3.2.0"
